--- a/package.json
+++ b/package.json
@@ -19,15 +19,7 @@
   },
   "homepage": "https://github.com/Priyadubal18/MVCReceipeAdd#readme",
   "dependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.5.5",
     "axios": "^0.19.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql": "^2.17.1",
@@ -38,6 +30,12 @@
   "devDependencies": {
     "@babel/preset-env": "^7.5.5",
     "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.6"
+    "webpack-cli": "^3.3.6",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.5.5",
+    "babel-loader": "^8.0.6"
   }
 }
