--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mysql": "^2.17.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-star-rating-component": "^1.4.1",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
