--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "file-loader": "^4.2.0",
     "mysql": "^2.17.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
